# QT_Course

./: .gitignore
Task1_QT/: CMakeLists.txt  main.cpp  resources.qrc
Task1_QT/qml/: About.qml  Gallery.qml  Home.qml  SplashScreen.qml  main.qml
